--- a/package.json
+++ b/package.json
@@ -3,24 +3,58 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint --dir . && tsc --noEmit",
+    "lint:fix": "next lint --dir . --fix"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase-cache-helpers/postgrest-swr": "^1.8.1",
+    "@supabase/postgrest-js": "^1.15.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.5.0",
     "geist": "^1.2.1",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.4",
+    "recharts": "^2.12.3",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.3.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
-    "encoding": "^0.1.13"
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "encoding": "^0.1.13",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-simple-import-sort": "12.0.0",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.12"
   }
 }
