--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.5.0",
     "geist": "^1.2.1",
-    "next": "latest",
+    "next": "15.0.0-rc.0",
     "postcss": "8.4.33",
-    "react": "18.2.0",
+    "react": "19.0.0-rc-e56f4ae3-20240830",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "19.0.0-rc-e56f4ae3-20240830",
     "react-hook-form": "^7.51.4",
     "recharts": "^2.12.3",
     "swr": "^2.2.5",
@@ -50,7 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "encoding": "^0.1.13",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "15.0.0-rc.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-jsx-a11y": "6.8.0",
