--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
