--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.5.0",
     "geist": "^1.2.1",
+    "lucide-react": "^0.441.0",
     "next": "latest",
     "postcss": "8.4.33",
     "react": "18.2.0",
