--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/postgrest-js": "^1.15.8",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
