--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir . && tsc --noEmit",
-    "lint:fix": "next lint --dir . --fix"
+    "lint:fix": "next lint --dir . --fix",
+    "generate:supabase-types": "sh -ac '. .env.local && npx supabase gen types --lang=typescript --project-id \"$SUPABASE_PROJECT_ID\" --schema public > types/supabase.ts'"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.0",
@@ -17,7 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
@@ -32,6 +33,7 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "1.0.0",
     "date-fns": "^3.5.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.441.0",
