--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase-cache-helpers/postgrest-swr": "^1.8.1",
-    "@supabase/postgrest-js": "^1.17.7",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase-cache-helpers/postgrest-swr": "^1.10.5",
+    "@supabase/postgrest-js": "^1.15.8",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.46.2",
     "@vercel/analytics": "^1.0.0",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
@@ -39,7 +39,7 @@
     "date-fns": "^3.5.0",
     "geist": "^1.2.1",
     "lucide-react": "^0.441.0",
-    "next": "latest",
+    "next": "14.2.10",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
