--- a/package.json
+++ b/package.json
@@ -72,5 +72,8 @@
     "eslint-plugin-simple-import-sort": "12.0.0",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.12"
+  },
+  "overrides": {
+    "react-is": "^19.0.0"
   }
 }
