--- a/package.json
+++ b/package.json
@@ -9,68 +9,67 @@
     "generate:supabase-types": "sh -ac '. .env.local && npx supabase gen types --lang=typescript --project-id \"$SUPABASE_PROJECT_ID\" --schema public > types/supabase.ts'"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.4.0",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.1.0",
-    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@supabase-cache-helpers/postgrest-swr": "^1.10.5",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@supabase/auth-js": "^2.66.1",
     "@supabase/postgrest-js": "^1.15.8",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.46.2",
-    "@vercel/analytics": "^1.0.0",
-    "autoprefixer": "10.4.17",
-    "class-variance-authority": "^0.7.0",
+    "@supabase/supabase-js": "^2.47.2",
+    "@vercel/analytics": "^1.4.1",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
-    "cmdk": "1.0.0",
-    "date-fns": "^3.5.0",
+    "cmdk": "1.0.4",
+    "date-fns": "^4.1.0",
     "geist": "^1.2.1",
-    "lucide-react": "^0.441.0",
+    "lucide-react": "^0.468.0",
     "next": "15.0.4",
-    "postcss": "8.4.33",
+    "postcss": "8.4.49",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.4.1",
     "react-dom": "19.0.0",
-    "react-hook-form": "^7.51.4",
-    "recharts": "^2.12.3",
-    "swr": "^2.2.5",
+    "react-hook-form": "^7.54.0",
+    "recharts": "^2.14.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "3.4.16",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.3.3",
+    "typescript": "5.7.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.8.0",
-    "@supabase/auth-js": "^2.66.0",
-    "@types/node": "20.11.5",
-    "@types/react": "18.3.12",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
+    "@types/node": "22.10.1",
+    "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "8.17.0",
     "encoding": "^0.1.13",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
+    "eslint-config-next": "15.0.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-jsx-a11y": "6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-simple-import-sort": "12.0.0",
-    "prettier": "3.2.5",
+    "prettier": "3.4.2",
     "prettier-plugin-tailwindcss": "0.5.12"
   },
   "overrides": {
