--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "@supabase/postgrest-js": "^1.15.8",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.2",
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "@vercel/analytics": "^1.4.1",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.13.5",
     "geist": "^1.2.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
