--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "geist": "^1.2.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
+    "next-themes": "^0.4.4",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
@@ -52,6 +53,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.0",
     "recharts": "^2.14.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.16",
     "tailwindcss-animate": "^1.0.7",
