--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
+    "nuqs": "^2.3.1",
     "postcss": "8.4.49",
     "react": "19.0.0",
     "react-colorful": "^5.6.1",
