--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@eslint/js": "^9.16.0",
     "@types/node": "22.10.1",
     "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.  0",
+    "@types/react-dom": "19.0.0",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "8.17.0",
     "encoding": "^0.1.13",
