--- a/package.json
+++ b/package.json
@@ -44,14 +44,14 @@
     "framer-motion": "^11.13.5",
     "geist": "^1.2.1",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "16.0.1",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
     "postcss": "8.4.49",
-    "react": "19.0.0",
+    "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.54.0",
     "recharts": "^2.14.1",
     "sonner": "^1.7.1",
@@ -66,13 +66,13 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "@types/node": "22.10.1",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "8.17.0",
     "encoding": "^0.1.13",
     "eslint": "8.57.0",
-    "eslint-config-next": "15.0.4",
+    "eslint-config-next": "16.0.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-jsx-a11y": "^6.10.2",
@@ -83,5 +83,11 @@
   },
   "overrides": {
     "react-is": "^19.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
   }
 }
