--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -39,7 +39,8 @@
     ".eslintrc.cjs",
     "*.config.js",
     "*.config.ts",
-    "*.js"
+    "*.js",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
