--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "@supabase/postgrest-js": "^1.15.8",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.2",
+    "@tailwindcss/postcss": "^4.1.17",
     "@tsparticles/engine": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.7.1",
     "@vercel/analytics": "^1.4.1",
-    "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "cmdk": "1.0.4",
@@ -56,7 +56,7 @@
     "recharts": "^2.14.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "3.4.16",
+    "tailwindcss": "4.1.17",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.7.2",
     "vaul": "^1.1.1",
@@ -79,7 +79,7 @@
     "eslint-plugin-prettier": "5.1.3",
     "eslint-plugin-simple-import-sort": "12.0.0",
     "prettier": "3.4.2",
-    "prettier-plugin-tailwindcss": "0.5.12"
+    "prettier-plugin-tailwindcss": "0.7.1"
   },
   "overrides": {
     "react-is": "^19.0.0"
