--- a/package.json
+++ b/package.json
@@ -41,13 +41,18 @@
     "clsx": "^2.1.0",
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.7",
+    "drizzle-orm": "^0.44.7",
     "framer-motion": "^11.13.5",
     "geist": "^1.2.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
     "next": "16.0.1",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
     "postcss": "8.4.49",
+    "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "^8.10.1",
