--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/auth-js": "^2.66.1",
+    "@supabase/auth-js": "2.69.1",
     "@supabase/postgrest-js": "^1.15.8",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.2",
@@ -48,7 +48,7 @@
     "geist": "^1.2.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.468.0",
-    "next": "16.0.1",
+    "next": "16.1.0",
     "next-themes": "^0.4.4",
     "nuqs": "^2.3.1",
     "postcss": "8.4.49",
